Made hero title shift to center at a higher resolution to avoid it bleeding outside the page

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -118,7 +118,7 @@ h1, h2, h3, h4 {
         display: block;
     }
 
-    @media (min-width: 680px) {
+    @media (min-width: 992px) {
         h1 {
             text-align: left;
             margin-left: 50%;
